Fixing code inspections